Closed Bug 704479 Opened 13 years ago Closed 13 years ago

Annotate ReleaseChannel even earlier during startup

Categories

(Toolkit :: Crash Reporting, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla11

People

(Reporter: ted, Assigned: ted)

References

Details

Attachments

(1 file)

Currently we add the ReleaseChannel annotation by getting the preference value, which is pretty deep into startup. If we crash before that, we won't get a ReleaseChannel. We can annotate the default value from MOZ_RELEASE_CHANNEL immediately after we enable crash reporting, which should be a sane value most of the time.
Simple patch. I tested by adding an intentional crash right after the crashreporter block, and I saw "ReleaseChannel=default" in the crashreporter details window.
Attachment #576154 - Flags: review?(benjamin)
Attachment #576154 - Flags: review?(benjamin) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla11
Comment on attachment 576154 [details] [diff] [review] Annotate ReleaseChannel with MOZ_UPDATE_CHANNEL earlier in startup [Approval Request Comment] Regression caused by (bug #): <not a regression> User impact if declined: Crash analysis on some startup crashes is more difficult. Testing completed (on m-c, etc.): The patch landed on mozilla-central and made it to aurora during the migration. Risk to taking this patch (and alternatives if risky): Low risk, simply adds one more annotation during startup to the existing set. We don't have to take this patch, it's not a regression fix and it doesn't actual fix any crashes. It simply provides the release channel data in certain circumstances where we don't normally get it. Namely, startup crashes that happen before the user profile has been located. The crash data is still available, it's just not associated with a release channel, which means it fails to show up in certain reports.
Attachment #576154 - Flags: approval-mozilla-beta?
Comment on attachment 576154 [details] [diff] [review] Annotate ReleaseChannel with MOZ_UPDATE_CHANNEL earlier in startup This can wait the four weeks and ride the trains. Thanks, though, for the very informative approval request, Ted.
Attachment #576154 - Flags: approval-mozilla-beta? → approval-mozilla-beta-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: