bug 704479 - Annotate ReleaseChannel with MOZ_UPDATE_CHANNEL earlier in startup. r=bsmedberg